--- a/assets/css/snow.css
+++ b/assets/css/snow.css
@@ -1,8 +1,11 @@
 body,
 html {
-    background-color: #111;
     height: 100%;
     width: 100%;
+}
+
+body {
+    background-color: #111;
 }
 
 .snow {
